--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <embed src="./firstSong.mp3" loop="true" autostart="true" width="2"
+    height="0">
     <div id="root"></div>
     <!--
       This HTML file is a template.
